--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -316,15 +316,15 @@
                                         <p class="text-white">Make this event Public or Private?</p>
                                         <div class="row">
                                             <div class="col-1">
-                                                {{ createdEventDetails }}
+                                                <!-- {{ createdEventDetails }} -->
                                                 <label class="switch mt-2">
                                                     <input type="checkbox" class="custom-control-input" id="switch1"
                                                         formControlName="isPublic">
                                                     <span class="slider round"></span>
                                                 </label>
                                             </div>
-                                            <div class="col-1">
-                                                <p class="text-white text-center public">Public</p>
+                                            <div class="col-11">
+                                                <p class="text-white public">Public</p>
                                             </div>
                                         </div>
                                     </div>
