--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -138,7 +138,7 @@
                                         [ngClass]="{ 'is-invalid': f.lastName.touched && f.lastName.errors }">
                                     <div id="message2"></div>
                                     <div *ngIf=" f.lastName.touched && f.lastName.errors"
-                                        class="invalid-feedback text-white">
+                                        class="invalid-feedback text-white text-left">
                                         <div *ngIf="f.lastName.errors.required">Name is required</div>
                                         <div *ngIf="f.lastName.errors.minlength">Name must be at least 2 characters
                                         </div>
@@ -148,12 +148,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Mobile Number" name="no"
+                                    <input type="text" class="form-control w-100" placeholder="Mobile Number" name="no"
                                         formControlName="mobile" (input)="validatePhone(signUpForm.value)" id="mobile"
                                         [ngClass]="{ 'is-invalid': f.mobile.touched && f.mobile.errors }">
-                                    <div id="message"></div>
+                                    <div class="text-white" id="message"></div>
                                     <div *ngIf="f.mobile.touched && f.mobile.errors"
-                                        class="invalid-feedback text-white">
+                                        class="invalid-feedback text-white text-left">
                                         <div *ngIf="f.mobile.errors.minlength">Phone must be only 10 digits</div>
                                         <div *ngIf="f.mobile.errors.maxlength">Phone must be only 10 digits</div>
                                     </div>
